tests/codegen/errors/reader/tests-infix-calls/atom.reader.error.reader.tests.block.missing.close/reader-tests-block-missing-close.mon
;; TEST-ID: tests.codegen.reader-error.reader-tests-block-missing-close
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/tests-infix-calls
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected ')' to close tests block
;; TEST-ATOM: atom.reader.error.reader.tests.block.missing.close
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.tests.block.missing.close
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected ')' to close tests block
;; TEST-READER-PATH: reader.c:5788 parser.tests
;; TEST-CODEGEN-PATH: diagnostic.parser.tests
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:5788 Expected ')' to close tests block
;; TEST-USES-ATOM: atom.reader.error.reader.tests.block.missing.close
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.tests
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/tests-infix-calls/atom.reader.error.reader.tests.block.missing.close
;; TEST-MENU-PATH: codegen/errors/reader/tests-infix-calls/atom.reader.error.reader.tests.block.missing.close
;; TEST-ATOM-LEAF: atom.reader.error.reader.tests.block.missing.close
;; TEST-CLI-TARGET: codegen errors reader tests-infix-calls

(module Main)
(tests (assert True)
